# nandy2024

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake
ext/: applog.h  applog_sink.h
src/: app.cpp  app.h  application.cpp  application.h  common.h  config.h  main.cpp  pch.h  types.h  utils.h
src/logic/: logic_sim.cpp  logic_sim.h
src/simulation/: circuit.h  circuit_runner.cpp  circuit_runner.h
src/simulation/commands/: add_component_command.h  command.h  connect_components_command.h  disconnect_components_command.h  move_components_command.h  remove_components_command.h
src/simulation/components/: component.h  composite_component.h  nand_gate.h
src/ui/: applog.h  applog_sink.h  canvas_controller.h  canvas_view_model.h  renderer.cpp  renderer.h  ui.cpp  ui.h  ui_input_handler.h
src/ui/actions/: action.h  canvas_component_hovered_action.h  ui_canvas_hovered_action.h  ui_close_requested_action.h  ui_drag_drop_action.h  ui_keypress_action.h  ui_mouse_down_action.h  ui_mouse_moved_action.h  ui_mouse_up_action.h  ui_mouse_wheel_action.h  ui_sim_control_action.h
src/ui/events/: event.h  ui_drag_drop_event.h  ui_drag_ended_event.h  ui_drag_started_event.h  ui_drag_update_event.h  ui_mouse_click_event.h
src/ui/renderers/: _old_renderer.cpp  ui_renderer.h  window_renderer.h
src/ui/states/: state_none.h  uistate.h
